--- a/SolutionPoo/pooFrases/pooFrases/pooFrases.csproj
+++ b/SolutionPoo/pooFrases/pooFrases/pooFrases.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B90B2612-5EAC-4D23-B980-256DBCC1B143}</ProjectGuid>
+    <ProjectGuid>{80CBEC33-3128-497C-BE3F-4EC0154C7DE0}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>pooPokemonApp</RootNamespace>
-    <AssemblyName>pooPokemonApp</AssemblyName>
+    <RootNamespace>pooFrases</RootNamespace>
+    <AssemblyName>pooFrases</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,8 +43,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Pokedex.cs" />
-    <Compile Include="Pokemon.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
