--- a/SolutionPoo/pooPerguntaEResposta/pooPerguntaEResposta/pooPerguntaEResposta.csproj
+++ b/SolutionPoo/pooPerguntaEResposta/pooPerguntaEResposta/pooPerguntaEResposta.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B90B2612-5EAC-4D23-B980-256DBCC1B143}</ProjectGuid>
+    <ProjectGuid>{32A6A384-5D61-4871-9B47-7C45D6DB2607}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>pooPokemonApp</RootNamespace>
-    <AssemblyName>pooPokemonApp</AssemblyName>
+    <RootNamespace>pooPerguntaEResposta</RootNamespace>
+    <AssemblyName>pooPerguntaEResposta</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,8 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Pokedex.cs" />
-    <Compile Include="Pokemon.cs" />
+    <Compile Include="Pergunta.cs" />
+    <Compile Include="PerguntaPlus.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
